<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileDataManager</string>
    <string name="action_settings">Settings</string>
    <string name="switch_mobile_data">Mobile Data</string>
    <string name="switch_mobile_data_manager">Mobile Data Manager</string>
    <string name="set_start_time">Start Time</string>
    <string name="set_end_time">End Time</string>
    <string name="set_time_text">Period when mobile data is off</string>
    <string name="text_time_default">00:00</string>
    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tuesday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>
    <string name="text_sunday">Sunday</string>

</resources>
