<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Switch
        android:id="@+id/switch_mobile_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/switch_mobile_data" />

    <Switch
        android:id="@+id/switch_mobile_data_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/switch_mobile_data"
        android:layout_below="@id/switch_mobile_data"
        android:layout_marginTop="16dp"
        android:text="@string/switch_mobile_data_manager" />

    <TextView
        android:id="@+id/set_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/switch_mobile_data_manager"
        android:layout_below="@id/switch_mobile_data_manager"
        android:layout_marginTop="16dp"
        android:text="@string/set_time_text" />

    <Button
        android:id="@+id/button_set_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_time_text"
        android:layout_alignLeft="@id/set_time_text"
        android:text="@string/set_start_time" />

    <TextView
        android:id="@+id/text_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/button_set_start_time"
        android:layout_alignBottom="@id/button_set_start_time"
        android:layout_toRightOf="@id/button_set_start_time"
        android:layout_marginLeft="16dp"
        android:text="@string/text_time_default" />
    
    <Button
        android:id="@+id/button_set_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_set_start_time"
        android:layout_alignLeft="@id/button_set_start_time"
        android:text="@string/set_end_time" />

    <TextView
        android:id="@+id/text_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/button_set_end_time"
        android:layout_alignBottom="@id/button_set_end_time"
        android:layout_toRightOf="@id/button_set_end_time"
        android:layout_alignLeft="@id/text_start_time"
        android:text="@string/text_time_default" />
    
    <CheckBox
        android:id="@+id/checkBoxMonday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_set_end_time"
        android:layout_below="@id/button_set_end_time"
        android:text="@string/text_monday" />

    <CheckBox
        android:id="@+id/checkBoxTuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/checkBoxMonday"
        android:layout_below="@id/checkBoxMonday"
        android:text="@string/text_tuesday" />

    <CheckBox
        android:id="@+id/checkBoxWednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/checkBoxTuesday"
        android:layout_below="@id/checkBoxTuesday"
        android:text="@string/text_wednesday" />
    
    <CheckBox
        android:id="@+id/checkBoxThursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/checkBoxWednesday"
        android:layout_below="@id/checkBoxWednesday"
        android:text="@string/text_thursday" />

    <CheckBox
        android:id="@+id/checkBoxFriday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/checkBoxThursday"
        android:layout_below="@id/checkBoxThursday"
        android:text="@string/text_friday" />

    <CheckBox
        android:id="@+id/checkBoxSaturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/checkBoxMonday"
        android:layout_alignBottom="@id/checkBoxMonday"
        android:layout_toRightOf="@id/checkBoxMonday"
        android:layout_marginLeft="16dp"
        android:text="@string/text_saturday" />

    <CheckBox
        android:id="@+id/checkBoxSunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/checkBoxTuesday"
        android:layout_alignBottom="@id/checkBoxTuesday"
        android:layout_toRightOf="@id/checkBoxTuesday"
        android:layout_alignLeft="@id/checkBoxSaturday"
        android:text="@string/text_sunday" />

</RelativeLayout>